--- a/tailwind.css
+++ b/tailwind.css
@@ -37,9 +37,44 @@
     --dot-progress: 100%
   }
 }
-.space-between{
+
+.space-between {
   justify-content: space-between;
 }
-.drawer{
-  width: unset!important;
+
+.drawer {
+  width: unset !important;
+}
+
+.scrolling {
+  background-color: #123ADD !important;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+@keyframes scroll {
+  0% {
+      transform: translateX(0);
+  }
+  100% {
+      transform: translateX(-100%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+}
+.animate-scroll:hover {
+  animation-play-state: paused; 
 }
