--- a/tailwind.css
+++ b/tailwind.css
@@ -6,7 +6,7 @@
 
   /* Allow changing font family via CMS */
   html {
-    font-size: 15px;
+    font-size: 16px;
     font-family: var(--font-family);
   }
 
@@ -179,4 +179,65 @@ details>summary::marker {
 *::-webkit-media-controls-start-playback-button {
   display: none !important;
   -webkit-appearance: none;
+}
+
+.fluid-text h2 {
+  margin: 24px 0;
+  font-size: 18px;    
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.fluid-text h3,
+.fluid-text h4 {
+  margin: 16px 0;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.fluid-text ul {
+  margin: 12px 0 12px 10px;
+  list-style: inside;
+}
+
+.fluid-text li {
+  margin: 8px 0;
+}
+
+.fluid-text p,
+.fluid-text p span {
+  margin: 12px 0;
+  font-size: 14px !important;
+}
+
+@media (max-width: 1024px) {
+  .fluid-text h2 {
+    margin: 24px 0;
+    font-size: 16px;    
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  
+  .fluid-text h3,
+  .fluid-text h4 {
+    margin: 16px 0;
+    font-size: 14px;
+    font-weight: bold;
+  }
+  
+  .fluid-text ul {
+    margin: 12px 0 12px 10px;
+    list-style: inside;
+  }
+  
+  .fluid-text li {
+    margin: 8px 0;
+    font-size: 12px;
+  }
+  
+  .fluid-text p,
+  .fluid-text p span {
+    margin: 12px 0;
+    font-size: 12px !important;
+  }
 }
