--- a/tailwind.css
+++ b/tailwind.css
@@ -7,12 +7,13 @@
   html,
   body {
     font-size: 16px;
-    font-family: var(--font-family);
+    /* font-family: var(--font-family); */
+    font-family: "Poppins", serif;
     scroll-behavior: smooth;
   }
 
   * {
-    font-family: var(--font-family);
+    /* font-family: var(--font-family); */
   }
 
   /** Remove default styles from input[type=number] */
