--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -867,14 +867,6 @@ html {
 .carousel-end .carousel-item {
   scroll-snap-align: end;
 }
-.chat {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-  -moz-column-gap: 0.75rem;
-       column-gap: 0.75rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
 .checkbox {
   flex-shrink: 0;
   --chkbg: var(--fallback-bc,oklch(var(--bc)/1));
@@ -3934,6 +3926,9 @@ details.collapse summary::-webkit-details-marker {
 .ml-5 {
   margin-left: 1.25rem;
 }
+.ml-8 {
+  margin-left: 2rem;
+}
 .ml-\[10px\] {
   margin-left: 10px;
 }
@@ -4065,6 +4060,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .h-8 {
   height: 2rem;
+}
+.h-\[100vh\] {
+  height: 100vh;
 }
 .h-\[10px\] {
   height: 10px;
@@ -4831,9 +4829,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .rounded-none {
   border-radius: 0px;
-}
-.rounded-sm {
-  border-radius: 0.125rem;
 }
 .rounded-xl {
   border-radius: 0.75rem;
